syntax = "proto3";

import "google/protobuf/empty.proto";

package product;

message Status {
  bool success = 1;
}

message Id {
  string id = 1;
}

message Name {
  string name = 1;
}

message CreateAttributeInput {
  string variant_id = 1;
  string key = 2;
  string value = 3;
  optional string store_id = 4; // Optional, if the attribute is store-specific
}

message FindAttributeInput {
  optional string variant_id = 1;
  optional AttributeOrderBy orderBy = 2;
  optional int32 skip = 3; // Number of items to skip for pagination
  optional int32 take = 4;
}

message AttributeOrderBy {
  optional string key = 1; // Sort by key
  optional string value = 2; // Sort by value
  optional string created_at = 3; // Sort by value
  optional string updated_at = 4;
}

message UpdateAttributeInput {
  string id = 1;
  optional string key = 2;
  optional string value = 3;
}

message Attribute {
  string id = 1;
  string name = 2;
  string value = 3;
  string variant_id = 4;
}

message AttributeList {
  repeated Attribute attributes = 1;
}

service AttributeService {
  rpc Create (CreateAttributeInput) returns (Attribute) {}
  rpc Get (Id) returns (Attribute) {}
  rpc List (FindAttributeInput) returns (AttributeList) {}
  rpc Update (UpdateAttributeInput) returns (Attribute) {}
  rpc Delete (Id) returns (Status) {}
}

message CreateCategoryInput {
  string name = 1;
  string description = 2;
}

message FindCategoryInput {
  optional CategoryOrderBy orderBy = 1;
  optional int32 skip = 2; // Number of items to skip for pagination
  optional int32 take = 3;
}

message CategoryOrderBy {
  optional string name = 1; // Sort by key
  optional string created_at = 2; // Sort by value
  optional string updated_at = 3; // Sort by value
}

message UpdateCategoryInput {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string created_at = 4;
  optional string updated_at = 5;
}

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
  optional string created_at = 4;
  optional string updated_at = 5;
}

message CategoryList {
  repeated Category categories = 1;
}

service CategoryService {
  rpc Create (CreateCategoryInput) returns (Category) {}
  rpc GetById (Id) returns (Category) {}
  rpc GetByName (Name) returns (Category) {}
  rpc List (FindCategoryInput) returns (CategoryList) {}
  rpc Update (UpdateCategoryInput) returns (Category) {}
  rpc Delete (Id) returns (Status) {}
}

message CreateProductInput {
  string name = 1;
  string description = 2;
  string store_id = 3;
  string category_id = 4;
  repeated string tags = 5;
  optional ProductVariantInput variant = 6; // IDs of attributes associated with the product
}

message ProductVariantInput {
  string sku = 1;
  int32 price = 2;
  int32 stock =3;
  repeated VariantAttributeInput attributes = 4;
}

message VariantAttributeInput {
  string key = 1;
  string value =2;
}

message UpdateProductInput {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
}

message ProductStore {
  string id= 1;
  string name = 2;
}

message ProductCategory {
  string id = 1;
  string name = 2;
}

message ProductVariant {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Attribute attributes = 4; // Attributes associated with the variant
}

message Product{
  string id = 1;
  string name = 2;
  string description = 3;
  string category_id = 4; // ID of the category this product belongs to
  string store_id = 5; // ID of the store this product belongs to
  string created_at = 6;
  string updated_at = 7;
  repeated ProductVariant variants = 8;
}

message ProductWithRelationships{
  string id = 1;
  string name = 2;
  string description = 3;
  ProductStore store = 4;
  ProductCategory category = 5; // Category of the product
  repeated ProductVariant variants = 6; // Attributes associated with the product
  string created_at = 7;
  string updated_at = 8;
}

message ProductList {
  repeated Product products = 1;
}

service ProductService {
  rpc Create (CreateProductInput) returns (Status) {}
  rpc Get (Id) returns (Product) {}
  rpc GetStoreProducts (Id) returns (ProductList) {}
  rpc GetCategoryProducts (Id) returns (ProductList) {}
  rpc List (google.protobuf.Empty) returns (ProductList) {}
  rpc Update (UpdateProductInput) returns (Status) {}
  rpc Delete (Id) returns (Status) {}
}

service VariantService {
  rpc Create (CreateVariantInput) returns (Status) {}
  rpc Get (Id) returns (Variant) {}
  rpc GetProductVariants (Id) returns (VariantList) {}
  rpc List (google.protobuf.Empty) returns (VariantList) {}
  rpc Update (UpdateVariantInput) returns (Status) {}
  rpc Delete (VariantId) returns (Status) {}
}

message CreateVariantInput {
  string product_id = 1;
  string sku = 2;
  int32 price = 3;
  int32 stock =4;
}

message UpdateVariantInput {
  string id = 1;
  optional string sku = 2;
  optional int32 price = 3;
}

message Variant {
  string id = 1;
  string product_id = 2;
  string sku = 3;
  int32 price = 4;
  int32 stock = 5;
  repeated Attribute attributes = 6;
  string created_at = 7;
  string updated_at = 8;
}

message VariantId {
  string id = 1;
}

message VariantList {
  repeated Variant variants = 1;
}